# routes/authors.js
@@ -1,0 +1,18 @@
+const express = require('express');
+const router = express.Router();
+
+const authorsController = require('../controllers/authors');
+
+router.get('/', authorsController.getAll);
+
+router.get('/:id', authorsController.getSingle);
+
+router.get('/personal/:id', authorsController.getSinglePersonalId);
+
+router.post('/', authorsController.createAuthor);
+
+router.put('/:id', authorsController.updateAuthor);
+
+router.delete('/:id', authorsController.deleteAuthor);
+
+module.exports = router;
